envoy-tests/scenarios/5/downstream/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3128
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          # - name: envoy.filters.http.local_ratelimit
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          #     stat_prefix: http_local_rate_limiter
          #     token_bucket:
          #       max_tokens: 1000
          #       tokens_per_fill: 100
          #       fill_interval: 1s
          #     filter_enabled:
          #       runtime_key: local_rate_limit_enabled
          #       default_value:
          #         numerator: 100
          #         denominator: HUNDRED
          #     filter_enforced:
          #       runtime_key: local_rate_limit_enforced
          #       default_value:
          #         numerator: 100
          #         denominator: HUNDRED
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_envoy_upstream

  clusters:
  - name: service_envoy_upstream
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 10
          max_pending_requests: 5
          max_requests: 20
          max_retries: 1
    load_assignment:
      cluster_name: service_envoy_upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: envoy_upstream
                port_value: 443
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
